  Bug#33791 Wrong ORDER BY with latin2_czech_cs   Problem: ORDER BY didn't take into account accents and cases   in multi-level collations (latin2_czech_cs and cp1250_czech_cs).   This happened because my_strnxfrm_xxx() family functions were   executed with wrong "nweights" argument, so only primary   level weights padded by primary weights for SPACE character   were written into the result. Bug was introduced in 6.0   with WL#3664 "strnxfrm() changes for prefix keys and NOPAD" (for Falcon).   Fix: pass correct "nweights" argument, pad each level to "nweights"   separetely, and additionally pad the result string to generate   fixed length records.   Additional changes:   - New syntax was added:   WEIGHT_STRING(expr, result_length, nweights, flags)   which is a great help for testing purposes.   - my_stnxfrm_xxx() family functions now write partial weights   if the full weight doesn't fit. This gives a little bit better   ORDER BY for strings longer than @@max_sort_length.   - Removing duplicate functions and introducing my_strnxfrm_unicode()   which is compatible with utf8, utf8mb4, ucs2, utf16, utf32.

include/m_ctype.h@1.145, 2008-03-26 15:26:45+04:00, bar@mysql.com +5 -1
    - Adding new flag, to pad strnxfrm() result to generate
    fixed length records (e.g. for filesort())
    - Adding new function prototype

  mysql-test/include/weight_string.inc:
    Adding tests

  mysql-test/include/weight_string_8140.inc:
    Adding tests

  mysql-test/include/weight_string_8EA1.inc:
    Adding tests

  mysql-test/include/weight_string_8FA2C3.inc:
    Adding tests

  mysql-test/include/weight_string_A1A1.inc:
    Adding tests

  mysql-test/include/weight_string_chde.inc:
    Adding tests

  mysql-test/include/weight_string_euro.inc:
    Adding a new include test file, for better test coverage.
    This is to test that my_strnxfrm_xxx() functions allow
    writting of partial weights into the result.
    

  mysql-test/include/weight_string_euro.inc:

  mysql-test/r/ctype_big5.result:
    Adding tests

  mysql-test/r/ctype_cp1250_ch.result:
    Adding tests

  mysql-test/r/ctype_cp932_binlog_stm.result:
    Adding tests

  mysql-test/r/ctype_eucjpms.result:
    Adding tests

  mysql-test/r/ctype_euckr.result:
    Adding tests

  mysql-test/r/ctype_gb2312.result:
    Adding tests

  mysql-test/r/ctype_gbk.result:
    Adding tests

  mysql-test/r/ctype_latin1.result:
    Adding tests

  mysql-test/r/ctype_latin1_de.result:
    Adding tests

  mysql-test/r/ctype_latin2.result:
    Adding tests

  mysql-test/r/ctype_latin2_ch.result:
    Adding tests

  mysql-test/r/ctype_sjis.result:
    Adding tests

  mysql-test/r/ctype_tis620.result:
    Adding tests

  mysql-test/r/ctype_uca.result:
    Adding tests

  mysql-test/r/ctype_ucs.result:
    Adding tests

  mysql-test/r/ctype_ujis.result:
    Adding tests

  mysql-test/r/ctype_utf16.result:
    Adding tests

  mysql-test/r/ctype_utf16_uca.result:
    Adding tests

  mysql-test/r/ctype_utf32.result:
    Adding tests

  mysql-test/r/ctype_utf32_uca.result:
    Adding tests

  mysql-test/r/ctype_utf8.result:
    Adding tests

  mysql-test/suite/binlog/r/binlog_stm_ctype_cp932.result:
    Adding tests

  mysql-test/t/ctype_cp1250_ch.test:
    Adding tests

  mysql-test/t/ctype_latin1.test:
    Adding tests

  mysql-test/t/ctype_latin1_de.test:
    Adding tests

  mysql-test/t/ctype_latin2_ch.test:
    Adding tests

  mysql-test/t/ctype_uca.test:
    Adding tests

  mysql-test/t/ctype_ucs.test:
    Adding tests

  mysql-test/t/ctype_utf16.test:
    Adding tests

  mysql-test/t/ctype_utf16_uca.test:
    Adding tests

  mysql-test/t/ctype_utf32.test:
    Adding tests

  mysql-test/t/ctype_utf32_uca.test:
    Adding tests

  mysql-test/t/ctype_utf8.test:
    Adding tests

  mysql-test/t/disabled.def:
    Uncommenting failing test

  sql/field.cc:
    Fix for bug#33791 (a bug since 6.0):
    
    - Using explicit function call, instead of macros, to pass new flag
    - Passing correct "nweights" argument.
    
    This change fixes filesort() behavior for for multi-level collations
    (like cp1250_czech_cs and latin2_czech_cs).
    Weight strings are now generated using this format:
    
      PPPPpppp.SSSSssss.TTTTtttt.QQQQqqqq,
    
    assuming a column of type CHAR(8) or VARCHAR(8)
    with length=4, where:
    
    PPPP - primary weights for the source string (base letter),
    pppp - primary weights for padded trailing spaces,
    SSSS - secondary weights for the source string (accent),
    ssss - secondary weights for padded trailing spaces,
    TTTT - tertiary weights for the source string (case),
    tttt - tertiary weights for padded trailing spaces,
    QQQQ - quarternary weights (binary representation),
    qqqq - quarternary weights for padded trailing spaces,
    dot(.) - optional level separator.
    
    Previously wrong result of this format was generated:
    PPPPpppppppppppp, where PPPP - primary weights for the source string,
    pppppppppppp - primary weights for padded trailing spaces.
    I.e. only primary weights were written into the result
    (because of wrong "nweights"), and only primary weights were padded 
    with spaces (because of lack of two separate flags "pad each level"
    and "pad the result").
    Secondary and higher weights were never written to the result
    string, so accents and cases were never taken into account.

  sql/filesort.cc:
    A change similar to the one in field.cc, now for Items:
    - passing correct "nweights"
    - passing correct pad flags

  sql/item_strfunc.cc:
    New functionality (mostly for test purposes) - adding "result_length" parameter:
    - if result_length is non-zero, then use result_length as max_length
    - otherwise automatically calculate result's max_length using
    argument's max_length and nweights.

  sql/item_strfunc.h:
    Adding result_length.

  sql/sql_yacc.yy:
    Adding new syntax:
    WEIGHT_STRING(argument, result_length, nweights, flags)

  strings/ctype-czech.c:
    New code to pad result to fixed length.

  strings/ctype-mb.c:
    Allow writting of partial weights.
    If weight for the next character does't fit into the result,
    just write its part. This happens when ORDER BY expression
    generates results longer than max_sort_length. 
    Previously either the full weight was written, or was not
    written at all. Writting partial weight gives a little
    bit better ORDER BY result.

  strings/ctype-simple.c:
    - Remember new flag
    - New code to pad result to fixed length.

  strings/ctype-tis620.c:
    New code to pad result to fixed length.

  strings/ctype-uca.c:
    - Allow writting partial weights
    - New code to pad result to fixed length

  strings/ctype-ucs2.c:
    - Removing duplicate code: we have had separate functions
      strnxfrm() functions UCS2, UTF16, UTF32. 
    - Reusing my_strnxfrm_unicode() instead, which is compatible
      with all of them.

  strings/ctype-utf8.c:
    - Moving pad code into separate functions
    - Removing duplicate code: separate functions for UTF8 and UTF8MB3
    - Reusing my_strnxfrm_unicode() instead.

  strings/ctype-win1250ch.c:
    Adding new code for padding to fixed length.